--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,14 +10,13 @@
 @import "./base/typography";
 @import "./base/utilities";
 
-
 // COMPONENTS
 
 
 
 // LAYOUT
 
-
+@import "./layout/home";
 
 // PAGES
 
