Styling Form - Button

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,8 +1,12 @@
 // COLORS
 
 $color-primary: rgb(44, 187, 44);
+$color-primary-dark: rgb(35, 150, 35);
 
 $color-black-dark: rgb(15, 15, 15);
 $color-black-light: rgb(44, 43, 43);
+
+$color-grey-light: rgb(150, 145, 145);
+$color-grey-dark: rgb(112, 110, 110);
 
 $color-white: #fff;
