--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,3 +1,5 @@
+// BUTTON - GENERAL
+
 .btn {
     border: none;
     border-radius: 3rem;
@@ -6,10 +8,14 @@
     cursor: pointer;
 }
 
-.form__button {
+// -------------------------------
+// FORM - BUTTON
 
+.form__button {
     position: relative;
     overflow: hidden;
+
+    // WHEN FORM BUTTON IS DISABLED
 
     &:disabled,
     &:disabled:hover {
@@ -21,6 +27,8 @@
             );
         color: $color-grey-dark;
     }
+
+    // WHEN FORM BUTTON IS NOT DISABLED
 
     &,
     &:link,
@@ -51,6 +59,8 @@
         top: -120%;
     }
 
+    // WHEN THE FORM BUTTON IS HOVER
+
     &:hover {
         background-image: 
             linear-gradient(
@@ -68,6 +78,8 @@
     &:hover &-invisible {
         top: 0;
     }
+
+    // WHEN THE FORM BUTTON IS CLICKED
 
     &:active {
         width: 60%;
