Styling Select Button

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -10,3 +10,8 @@ $color-grey-light: rgb(150, 145, 145);
 $color-grey-dark: rgb(112, 110, 110);
 
 $color-white: #fff;
+
+
+// Img
+
+$bg-selector: '../img/select.png';
