--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -5,6 +5,18 @@
     color: $color-white;
 }
 
+.h2-white {
+    font-size: 2rem;
+    font-weight: 200;
+    color: $color-white;
+}
+
+.h2-green {
+    font-size: 2rem;
+    font-weight: 100;
+    color: $color-primary;
+}
+
 .text-green {
     color: $color-primary;
 }
