Making Website Responsive

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -3,6 +3,8 @@
     font-weight: 300;
     text-transform: uppercase;
     color: $color-white;
+
+    @include resize(phone) { font-size: 4rem };
 }
 
 .h2-white {
