--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -8,6 +8,8 @@
 
 html {
     font-size: 62.5%; // 1rem = 10px
+
+    @include resize(tablet) { font-size: 50% };
 }
 
 body {
@@ -22,5 +24,6 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
+    padding-bottom: 3rem;
     z-index: 1;
 }
