--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -3,8 +3,8 @@
 $color-primary: rgb(44, 187, 44);
 $color-primary-dark: rgb(35, 150, 35);
 
+$color-black: rgba(15, 15, 15, .80);
 $color-black-dark: rgba(15, 15, 15, 1);
-$color-black-dark-1: rgba(15, 15, 15, .80);
 $color-black-light: rgba(44, 43, 43, 1);
 
 $color-grey-light: rgb(150, 145, 145);
