--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -34,7 +34,7 @@
 
         background: url($bg-selector) no-repeat 95% center; 
         color: $color-white;
-        background-color: $color-black-dark-1;
+        background-color: $color-black;
         border-radius: .4rem;
         border: 1px solid $color-white;
 
